--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,10 @@ button{
     border-bottom-left-radius: 20px;
 }
 
-
+.icone-fichier{
+    width:100px;
+    height: auto;
+}
 
 @media (min-width: 576px) and (max-width: 767.98px) {
     .input-search{
