--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,11 @@ button{
     height: auto;
 }
 
+.file-size{
+    width:55px;
+    height:auto;
+}
+
 @media (min-width: 576px) and (max-width: 767.98px) {
     .input-search{
         width:90%;
